--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ em{
 	color:#FFF;
 	text-align:center;
 	height:50px;	
-	position:fixed;
+	position:absolute;
 	top:0;
 	z-index:100;
 }
@@ -84,7 +84,7 @@ em{
 	height:60px;
 	width:100%;
 	background:#ededed;
-	position:fixed;
+	position:absolute;
 	top:50px;
 	z-index:100;
 }
